adding group members

--- a/LoginPage/INDEX.html
+++ b/LoginPage/INDEX.html
@@ -1,3 +1,8 @@
+  <!-- Group members 
+  Ra'ees Manuel
+  OttorNcedo
+  Zimmy Commits -->
+
 <html-form action="action_page.php" style="border:1px solid #ccc">
     <div class="container">
       <h1>Login page</h1>
