--- a/services.html
+++ b/services.html
@@ -45,6 +45,9 @@
             <li class="nav-item">
                <a class="nav-link" href="#">Registration</a>
             </li>
+            <li class="nav-item">
+               <a class="nav-link" href="#">Gallery</a>
+            </li>
          <!-- Links -->
 
       </div>
