--- a/REGISTRATION.html
+++ b/REGISTRATION.html
@@ -2,6 +2,7 @@
 <html>
     <head>
     <title>Registration</title>
+   <link rel="stylesheet" href="register.css">
     </head>
 
     <body>
@@ -26,7 +27,14 @@
                 <br>
                 <label for = "repeat_psw"><b>Repeat Password</b></label><br>
                 <input type = "password" placeholder="Repeat Password" name="repeat_psw" id="repeat_psw" required>
-                <br>
+                
+		<style>
+		width: 100%;
+                border: none;
+                background: #f1f1f1;
+		</style>
+
+		<br>
                 <hr>
                 
                 <button type="submit" class="registerbtn">Register</button>
