--- a/Home/Home.html
+++ b/Home/Home.html
@@ -16,8 +16,8 @@
                     style="background-image: url('assets/img/business-registration.jpg')"></div>
                 <div class="col-lg-6 order-lg-1 my-auto showcase-text">
                     <h2>Register your business</h2>
-                    <p class="lead mb-0">Have a business you want to start? Great! Utilise our online portal to register
-                        your business to start your journey as a businessman or woman!</p>
+                    <p class="lead mb-0">Have a business you want to start? Great! We here at Tabeisa would love to assist you in setting up your 
+                        business!</p>
                     <p class="lead mb-0"><a href=>Register here ></a></p><!--insert link to page-->
                 </div>
             </div>
@@ -26,8 +26,8 @@
                     style="background-image: url('assets/img/d19d5sz0wkl0lu.cloudfront.jpg')"></div>
                 <div class="col-lg-6 my-auto showcase-text">
                     <h2>Business start-up mentorship</h2>
-                    <p class="lead mb-0">Receive great mentorships from successful businessmen and women to help start
-                        up your business!</p>
+                    <p class="lead mb-0">With Tabeisa, our aim is to help the CPUT community and public to receive great mentorship and to 
+                        empower yourself through the acquisition of entreprenurial skills!</p>
                     <p class="lead mb-0"><a href=>Let's get started ></a></p><!--insert link to page-->
                 </div>
             </div>
@@ -36,8 +36,7 @@
                     style="background-image: url('assets/img/getty_510482146_20001000200092800_335936.jpg')"></div>
                 <div class="col-lg-6 order-lg-1 my-auto showcase-text">
                     <h2>Helpful business information</h2>
-                    <p class="lead mb-0">If you're interested in learning more, access the information througout the
-                        site to learn more about business, starting one, and more!</p>
+                    <p class="lead mb-0">If you're interested in learning more, Please make use of our chatBot to learn about business, starting one, and more!</p>
                     <p class="lead mb-0"><a href=>Let's go! ></a></p><!--insert link to page-->
                 </div>
             </div>
