--- a/Home/Home.html
+++ b/Home/Home.html
@@ -36,7 +36,7 @@
                     style="background-image: url('assets/img/getty_510482146_20001000200092800_335936.jpg')"></div>
                 <div class="col-lg-6 order-lg-1 my-auto showcase-text">
                     <h2>Helpful business information</h2>
-                    <p class="lead mb-0">If you're interested in learning more, Please make use of our chatBot to learn about business, starting one, and more!</p>
+                    <p class="lead mb-0">If you're interested in learning more, Please make use of our ChatBot to learn more about business, starting one and much more!</p>
                     <p class="lead mb-0"><a href=>Let's go! ></a></p><!--insert link to page-->
                 </div>
             </div>
