--- a/services.html
+++ b/services.html
@@ -68,23 +68,19 @@
             </div>
             <div class="content">
                <div class="title">
-                  Service Name 1
+                 Mentorship Program
                </div>
                <div class="sub-title">
-                  Service Description
+                   Description:
                </div>
                <p>
-                  .........................................................................................
-                  .........................................................................................
-                  .........................................................................................
-                  .........................................................................................
-
+Supporting SMME's with managing cashflow, budgeting and other basic accounting activties from a seasoned Mentor.
                </p>
                <p>
-                  Service Cost
+                  <b>Service Cost</b>: Enquire to find out.
                </p>
                <p>
-                  Service Duration
+                  <b>Service Duration</b>: 12 Weeks.
                </p>
             </div>
          </div>
@@ -94,24 +90,22 @@
             </div>
             <div class="content">
                <div class="title">
-                  Service Name 2
+                  Entrepreneurship
                </div>
                <div class="sub-title">
-                  Service Description
+                 Description:
                </div>
                <p>
-                  .........................................................................................
-                  .........................................................................................
-                  .........................................................................................
-                  .........................................................................................
+                  Guidance and training required to manage 
+                  a project or business at any stage 
+                  of its life cycle.
 
                </p>
                <p>
-                  Service Cost
+                  <b>Service Cost</b>: Enquire to find out.
                </p>
                <p>
-                  Service Duration
-               </p>
+                  <b>Service Duration</b>: 8 weeks.
             </div>
          </div>
          <div class="card">
@@ -120,23 +114,21 @@
             </div>
             <div class="content">
                <div class="title">
-                  Service Name 3
+                  New Venture Creation
                </div>
                <div class="sub-title">
-                  Service Description
+                 Description:
                </div>
                <p>
-                  .........................................................................................
-                  .........................................................................................
-                  .........................................................................................
-                  .........................................................................................
-
+                  Training on understanding of the industry in which candidates wish to establish a new venture
+                 by matching new venture opportunities to market needs.
+            
                </p>
                <p>
-                  Service Cost
+                  <b>Service Cost</b>: Enquire to find out.
                </p>
                <p>
-                  Service Duration
+                  <b>Service Duration</b>: 6 weeks.
                </p>
             </div>
 
